<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="es.etg.dam.pmdm14.practica_final_moviles.ui.view.ExercisesActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitleRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:layout_marginTop="44dp"
            android:text="@string/insert_exercise"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtNameExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="84dp"
            android:layout_marginTop="72dp"
            android:text="@string/name_exercise"
            android:textColor="@color/gold"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitleRegister" />

        <EditText
            android:id="@+id/editTxtNameExercise"
            android:layout_width="183dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/name_exercise"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/txtNameExercise"
            app:layout_constraintTop_toBottomOf="@+id/txtNameExercise" />

        <TextView
            android:id="@+id/txtRepeticiones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/repetitions_exercise"
            android:textColor="@color/gold"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/txtNameExercise"
            app:layout_constraintTop_toBottomOf="@+id/editTxtNameExercise" />

        <EditText
            android:id="@+id/editRepetitions"
            android:layout_width="183dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/name"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/editTxtNameExercise"
            app:layout_constraintTop_toBottomOf="@+id/txtRepeticiones" />

        <TextView
            android:id="@+id/txtPesoLevantado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/weight_exercise"
            android:textColor="@color/gold"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/txtRepeticiones"
            app:layout_constraintTop_toBottomOf="@+id/editRepetitions" />

        <EditText
            android:id="@+id/editTxtweight"
            android:layout_width="183dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/surname"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/editRepetitions"
            app:layout_constraintTop_toBottomOf="@+id/txtPesoLevantado" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="176dp"
            android:backgroundTint="@color/gold"
            android:text="@android:string/cancel"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTxtweight" />

        <Button
            android:id="@+id/btnInsert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:backgroundTint="@color/gold"
            android:text="@string/insert_exercise"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/btnCancel"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>